# docser

./: .gitignore  Cargo.toml  README.md  Web Content Extraction Patterns Report.md  android.html  sample.html
src/: browser.rs  constants.rs  main.rs  models.rs  server.rs
src/extractor/: mod.rs
