[package]
name = "docser"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html2md = "0.2"
playwright-rs = "0.7.0"
urlencoding = "2.1"
readability-rust = "0.1.0"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization
codegen-units = 1 # Reduce parallel codegen units
strip = true     # Strip debug symbols
